backend/auth/tests/functional/utils/errors/captcha.py
class CaptchaError:
    SIGNATURE_DOES_NOT_EXIST = 'Отсутствует подпись данных.'
    NOT_VALID_SIGNATURE = 'Неправильный ответ на задачу.'
